fixed scrollbars and weirdness

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
 }
 
 canvas {
+	position: fixed;
 	width: 100%;
 	height: 100%;
 }
